--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <h1>Hello World!</h1>
 <image src="https://cdn.mos.cms.futurecdn.net/kCbvedK262UGLXCLFeW5oS.jpg" width="50%">
+<image src="https://cdn.mos.cms.futurecdn.net/kCbvedK262UGLXCLFeW5oS.jpg" width="50%">
