--- a/index.html
+++ b/index.html
@@ -1,2 +1,29 @@
-<h1>Hello World!</h1>
-<image src="https://cdn.mos.cms.futurecdn.net/kCbvedK262UGLXCLFeW5oS.jpg" width="50%">
+<head>
+  <h1>Hello World!</h1>
+  <image class="yeehaw" src="earth.png">
+  <br>
+  <br>
+  <p>yeehaw</p>
+  <button>Press if you are gay</button>
+  <br>
+  <a href="index2.html">click here</a>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+  <div class="poopy">
+    <ol>
+      <li>Curie</li>
+      <li>Pastuer</li>
+      <li>Newton</li>
+      <li>Edison</li>
+    </ol>
+    </div>
+    <ol>
+      <li>Curie</li>
+      <li>Pastuer</li>
+      <li>Newton</li>
+      <li>Edison</li>
+    </ol>
+</body>
+
+<a href="propoganda.html">propoganda</a>
